--- a/src/components/List.css
+++ b/src/components/List.css
@@ -2,8 +2,11 @@
     display: flex;
     flex-direction: column;
     width: 30vw;
+    flex: 1;
+    overflow-y: scroll;
     background-color: #FFFFFF;
     border-radius: 4px;
+    margin-bottom: 60px;
 }
 
 .list-item, .list-header {
