--- a/src/components/SearchPage.css
+++ b/src/components/SearchPage.css
@@ -8,6 +8,11 @@
     justify-content: center;
 }
 
+.title {
+    margin: 30px 0;
+    color: #FFFFFF;
+}
+
 .input-container {
     display: flex;
     width: 30vw;
@@ -36,6 +41,7 @@ input:focus {
     position: absolute;
     height: 60px;
     margin-top: 20px;
+    padding-left: 13px;
     color: gray;
 }
 
@@ -47,6 +53,6 @@ input:focus {
     width: 80px;
     border-radius: 4px;
     padding: 6px 0px;
-    margin: 10px 0;
+    margin: 30px 0;
     cursor: pointer;
 }
