Added more documentations, trailing space no longer affect prediction

--- a/src/components/List.css
+++ b/src/components/List.css
@@ -17,3 +17,9 @@
 .list-item.alter, .list-header {
     background-color: #f2f2f2;
 }
+
+@media only screen and (max-width: 1260px) {
+    .list {
+        width: 90vw;
+    }
+}
