--- a/src/components/SearchPage.css
+++ b/src/components/SearchPage.css
@@ -41,7 +41,7 @@ input:focus {
     position: absolute;
     height: 60px;
     margin-top: 20px;
-    padding-left: 13px;
+    padding-left: 13px; /* same as input padding left */
     color: gray;
 }
 
@@ -55,4 +55,10 @@ input:focus {
     padding: 6px 0px;
     margin: 30px 0;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 1260px) {
+    .input-container {
+        width: 90vw;
+    }
 }
